<resources>
    <string name="app_name">STAR RAIL THEATRE</string>
    <string name="slogan">Beyond Boundaries, Tickets in Harmony: Elevate Your Movie Experience!</string>
    <string name="plslogin">Please login to use our service</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="newcustomer">Welcome new customer! We are thrilled to have you on board.</string>
    <string name="cfpass">Confirm Password</string>
    <string name="signup">SIGN UP</string>
    <string name="forgotpass">Forgot your password</string>
    <string name="newuser">Are you new here?</string>
    <string name="register">Register here</string>
    <string name="tier1"> Recommended by Staff</string>
    <string name="tier2"> Most Popular this Week</string>
    <string name="tier3"> Most Popular this Month</string>
    <string name="movie_info">Movie Info</string>
    <string name="dir"> Director</string>
    <string name="desc"> Description</string>
    <string name="date">Click here to select Date</string>
    <string name="book">Book</string>
    <string name="hello">Hi</string>
    <string name="user_info">USER INFO</string>
    <string name="history">HISTORY</string>
    <string name="fav">FAVOURITE</string>
    <string name="vip">VIP</string>
    <string name="logout">LOGOUT</string>
    <string name="seat">SEAT</string>
    <string name="confirm">CONFIRM</string>
    <string name="name">Input Name here: </string>
    <string name="phone">Input Phone here: </string>
    <string name="payMethod">Choose Pay Method: </string>
    <string name="cod">COD </string>
    <string name="visa">Visa </string>
    <string name="ticket">Ticket # </string>
    <string name="book_name">Name: </string>
    <string name="book_date">Date: </string>
    <string name="book_phone">Phone: </string>
    <string name="book_payment">Payment: </string>
    <string name="book_price">Total Price: </string>
    <string name="cancel">Cancel</string>
    <string name="detail">detail &gt;</string>
</resources>