<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slogan"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newcustomer"
                android:textColor="#444544"
                android:textSize="12dp"
                android:textStyle="italic"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/edt_uesrname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_person_24"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/edt_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_lock_reset_24"
                android:ems="10"
                android:hint="@string/cfpass"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>


            <Button
                android:id="@+id/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#236A64"
                android:text="@string/signup" />

        </LinearLayout>

</RelativeLayout>