<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    android:contentDescription="@string/app_name"
    tools:context=".activity.OrderDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:onClick="back"
            android:src="@drawable/ic_arrow_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/ticket"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/tv_madonhang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="123"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginVertical="1dp"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/book_name"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nguyen Lac Truong thach"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginVertical="1dp"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/book_date"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19/05/03"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginVertical="1dp"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/book_phone"/>

            <TextView
                android:id="@+id/tv_receiverphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0926357101"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginVertical="1dp"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/book_payment"/>

            <TextView
                android:id="@+id/tv_paymentmethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MOMO"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginVertical="1dp"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/book_price"/>
            <TextView
                android:id="@+id/tv_totalprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:text="100.000"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvorderdetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_deleteorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:text="@string/cancel"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>