<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailMovieActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbardetailmovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:menu="@menu/menu_detailmovie"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:title="Thông tin sản phẩm"
        app:titleMarginStart="30dp"
        app:titleTextColor="@color/white" />
    <ScrollView
        android:layout_weight="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vpg_imagemovie"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tv_namemovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="Movie Name"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_pricemovie"
                android:text="100.000 Đ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:textSize="30dp"
                android:textColor="@color/red"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/dir"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_authormovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="Director name"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/desc"
                android:textColor="@color/black"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/tv_describemovie"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:textSize="20dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_selected_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/date"
                    android:textSize="20dp"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/spinner_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_weight="0"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:id="@+id/btn_trailer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/red"
            android:text="TRAILER"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_book"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_color"
            android:text="BOOK"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>
